--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Ignore next-mdx-enhanced cache directory
-.mdx-data
+notes.md
 
 # dependencies
 /node_modules
@@ -20,6 +18,7 @@
 
 # misc
 .DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -27,8 +26,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# vercel
+.vercel
